[package]
name = "chartplotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
gdal = "0.16.0"
geo = "0.27.0"
geo-types = "0.7.12"
geos = "8.3.0"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
sfml = "0.21.0"
toml = "0.8.8"
